# torch-distdev

./: README.md  pyproject.toml
nbs/: 00_simple.ipynb
src/distdev/: __init__.py  cluster.py  magic.py
src/torch_distdev/: __init__.py  cluster.py  magic.py  singleton.py
