[project]
name = "distdev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tom Pollak", email = "tompollak1000@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
