[project]
name = "torch-distdev"
version = "0.1.0"
description = "Distributed PyTorch development without the pain."
readme = "README.md"
authors = [{ name = "Tom Pollak", email = "tompollak1000@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
