[project]
name = "torch-distdev"
version = "0.1.0"
description = "Distributed PyTorch development without the pain."
readme = "README.md"
authors = [{ name = "Tom Pollak", email = "tompollak1000@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.5",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
